--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,11 +7,16 @@
 html, body {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 main {
   width: 100%;
 }
+
+
+
+
 
 .mt-1 {
   margin-top: 5px;
