--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './objects/buttons';
 @import './objects/links';
 @import './objects/inputs';
+@import './objects/alertErrors';
 
 
 // react component imports
